--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.173",
+    "apollo-datasource-rest": "^3.2.0",
     "apollo-server-express": "^3.3.0",
+    "axios": "^0.21.4",
     "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.3",
     "reflect-metadata": "^0.1.13",
