--- a/client/package.json
+++ b/client/package.json
@@ -10,23 +10,21 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.13",
-    "graphql": "^15.6.0",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "2.2.0",
-    "@types/react": "17.0.24",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "@apollo/client": "^3.4.16",
+    "@graphql-codegen/cli": "^2.2.2",
+    "@graphql-codegen/fragment-matcher": "3.2.0",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.3.0",
+    "@graphql-codegen/typescript-operations": "2.2.0",
+    "@graphql-codegen/typescript-react-apollo": "3.2.0",
+    "@types/react": "17.0.33",
+    "eslint": "8.1.0",
+    "eslint-config-next": "12.0.1",
+    "graphql": "^16.0.0",
+    "next": "12.0.1",
     "prettier": "^2.4.1",
-    "typescript": "4.4.3",
-    "@graphql-codegen/fragment-matcher": "3.1.0",
-    "@graphql-codegen/typescript-operations": "2.1.4",
-    "@graphql-codegen/typescript": "2.2.2",
-    "@graphql-codegen/typescript-react-apollo": "3.1.4",
-    "@graphql-codegen/introspection": "2.1.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "typescript": "4.4.4"
   }
 }
