--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.0",
     "@types/react": "17.0.33",
+    "clsx": "^1.1.1",
     "eslint": "8.1.0",
     "eslint-config-next": "12.0.1",
     "graphql": "^16.0.0",
