--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.2.0",
     "@types/react": "17.0.33",
     "clsx": "^1.1.1",
+    "date-fns": "^2.25.0",
     "eslint": "8.1.0",
     "eslint-config-next": "12.0.1",
     "graphql": "^16.0.0",
