add new query field for game days and restyle games page

--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "apollo-server-express": "^3.3.0",
     "axios": "^0.21.4",
     "class-validator": "^0.13.1",
+    "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.3",
