lots of changes preparing for deploy

--- a/client/package.json
+++ b/client/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 4000",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.16",
+    "@apollo/client": "^3.4.17",
     "@graphql-codegen/cli": "^2.2.2",
     "@graphql-codegen/fragment-matcher": "3.2.0",
     "@graphql-codegen/introspection": "2.1.0",
-    "@graphql-codegen/typescript": "2.3.0",
+    "@graphql-codegen/typescript": "2.3.1",
     "@graphql-codegen/typescript-operations": "2.2.0",
-    "@graphql-codegen/typescript-react-apollo": "3.2.0",
-    "@types/react": "17.0.33",
+    "@graphql-codegen/typescript-react-apollo": "3.2.1",
+    "@types/react": "17.0.34",
     "clsx": "^1.1.1",
     "date-fns": "^2.25.0",
-    "eslint": "8.1.0",
-    "eslint-config-next": "12.0.1",
-    "graphql": "^16.0.0",
-    "next": "12.0.1",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "12.0.3",
+    "graphql": "^15.7.2",
+    "next": "12.0.3",
     "prettier": "^2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
