--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "GraphQL implementation of the open SHL api",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "build": "rm -rf build && tsc",
+    "start": "node ./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,25 +19,22 @@
   "homepage": "https://github.com/viktorzetterstrom/shl-gql#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.4.1",
-    "ts-node-dev": "^1.1.8"
-  },
-  "dependencies": {
-    "@types/lodash": "^4.14.173",
-    "apollo-datasource-rest": "^3.2.0",
-    "apollo-server-express": "^3.3.0",
-    "axios": "^0.21.4",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "apollo-datasource-rest": "^3.4.0",
+    "apollo-server-express": "^3.5.0",
+    "axios": "^0.24.0",
     "class-validator": "^0.13.1",
     "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.3",
+    "graphql": "^15.7.2",
+    "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
+    "ts-node-dev": "^1.1.8",
     "type-graphql": "^1.1.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   }
 }
