--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.29.3",
     "typescript": "4.4.4"
   }
 }
